Fixing gap between image and below element on main

--- a/src/style.css
+++ b/src/style.css
@@ -16,8 +16,7 @@ body {
 .headerContent .container {
   display: flex;
   justify-content: space-between;
-  width: 100%;
-  height: 100%;
+  width: auto;
   padding: 2rem 1rem;
 }
 
@@ -27,6 +26,7 @@ body {
 }
 
 .mainContent-img-wrapper img {
+  vertical-align: middle;
   width: 49.45vw;
   height: auto;
 }
